--- a/Projeto/frontend/admin.html
+++ b/Projeto/frontend/admin.html
@@ -81,7 +81,7 @@
 <body>
     <div class="header">
         <h1>UALFlix</h1>
-        <button onclick="window.location.href='admin.html';">Entrar em administrador</button>
+        <button onclick="window.location.href='index.html';">Sair de administrador</button>
     </div>
 
     <!-- Parent container with two columns -->
