--- a/Projeto/frontend/index.html
+++ b/Projeto/frontend/index.html
@@ -57,7 +57,7 @@
 
     <div class="header">
         <h1>UALFlix</h1>
-        <button onclick="window.location.href='admin.html';">Entrar em administrador</button>
+        <button onclick="window.location.href='/admin.html';">Entrar em administrador</button>
     </div>
 
     <div id="videos"></div>
