--- a/Projeto/frontend/index.html
+++ b/Projeto/frontend/index.html
@@ -56,7 +56,7 @@
 <body>
 
     <div class="header">
-        <h1>UALFlix</h1>
+        <h1>TESTE</h1>
         <button onclick="window.location.href='/admin.html';">Entrar em administrador</button>
     </div>
 
