--- a/Projeto/frontend/stream.html
+++ b/Projeto/frontend/stream.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Stream</title>
+  <title>UALFlix</title>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
   <style>
     .video-container {
       position: relative;
-      padding-top: 56.25%; /* 16:9 Aspect Ratio */
+      padding-top: 56.25%;
     }
     .video-container video {
       position: absolute;
@@ -34,20 +34,17 @@
       <h1 class="text-2xl font-bold mb-4">Video</h1>
 
       <div class="video-container">
-        <!-- Elemento que reproduzirá o vídeo -->
         <video id="my-video" controls preload="auto">
           Este browser não suporta este tipo de ficheiro.
         </video>
       </div>
 
-      <!-- Div para exibir os detalhes do vídeo -->
       <div class="mt-4" id="video-details"></div>
     </div>
   </div>
 
   <script>
     document.addEventListener('DOMContentLoaded', function() {
-      // Recupera o objeto armazenado no sessionStorage
       const videoDataString = sessionStorage.getItem("videoData");
       console.log("Retrieved videoDataString:", videoDataString);
 
@@ -62,14 +59,11 @@
             return;
           }
 
-          // Monta a URL completa para o vídeo
           const videoURL = `http://127.0.0.1:7000/api/videos/${videoData.video}`;
           console.log("Constructed video URL:", videoURL);
 
-          // Define a URL como fonte do elemento video
           videoElement.src = videoURL;
 
-          // Eventos para depuração de carregamento do vídeo
           videoElement.addEventListener('error', (e) => {
             console.error("Erro ao carregar o vídeo:", e);
           });
@@ -83,7 +77,6 @@
             console.log("O vídeo está pronto para ser reproduzido.");
           });
           
-          // Exibe os detalhes do vídeo na página
           const detailsDiv = document.getElementById('video-details');
           detailsDiv.innerHTML = `
             <h2 class="text-xl font-bold">${videoData.title}</h2>
