--- a/Projeto/frontend/stream.html
+++ b/Projeto/frontend/stream.html
@@ -24,7 +24,7 @@
     <div class="mb-4">
       <button 
         class="border border-gray-300 px-4 py-2 rounded hover:border-gray-500" 
-        onclick="window.location.href='/admin.html';">
+        onclick="window.location.href='/index.html';">
         Catálogo
       </button>
 
